Update and rename test.php to test.html

--- a/test.html
+++ b/test.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html>
+<body>
+
+<form method="post" action="<?php echo $_SERVER['PHP_SELF'];?>">
+  Name: <input type="text" name="fname">
+  <input type="submit">
+</form>
+
 <?php
 if ($_SERVER["REQUEST_METHOD"] == "POST") {
     // collect value of input field
@@ -9,3 +18,6 @@ if ($_SERVER["REQUEST_METHOD"] == "POST") {
     }
 }
 ?>
+
+</body>
+</html>        echo $
