--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<a href="test_get.php?subject=PHP&web=W3schools.com">Test $GET</a>
+<a href="get.php?kek=lmao&hue=jooj">Test $GET</a>
 
 </body>
 </html>
