--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<a href="get.php?kek=lmao&hue=jooj">Test $GET</a>
+<a href="get.html?kek=lmao&hue=jooj">Test $GET</a>
 
 </body>
 </html>
