--- a/get.html
+++ b/get.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html>
+
 <?php
 if ($_SERVER["GET"] == "POST") {
     // collect value of input field
@@ -9,3 +12,5 @@ if ($_SERVER["GET"] == "POST") {
     }
 }
 ?>
+
+</html>
