--- a/get.html
+++ b/get.html
@@ -3,9 +3,7 @@
 
 <?php
 if ($_GET['kek'] == "lmao") {
-        echo "top";
-    } else {
-        echo ":disappointed:";
+        echo "top”;
     }
 ?>
 
