--- a/get.html
+++ b/get.html
@@ -2,8 +2,13 @@
 <html>
 
 <?php
-if ($_GET['kek'] == "lmao") {
-        echo "top”;
+if ($_SERVER["REQUEST_METHOD"] == "GET”) {
+    // collect value of input field
+    $name = $_GET['kek']; 
+    if (empty($name)) {
+        echo "Name is empty";
+    } else {
+        echo $name;
     }
 ?>
 
