--- a/uselessrecaptcha.html
+++ b/uselessrecaptcha.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 .center {
   margin: auto;
@@ -8,7 +9,9 @@
 }
 </style>
 </head>
+<body>
 <div class"center">
 <h1 style="color: #5e9ca0;"><iframe role="presentation" src="https://www.google.com/recaptcha/api2/anchor?ar=1&amp;k=6LfcWBYUAAAAAC7IdcoiUPmiILomcSJ8Bg7jPlxn&amp;co=aHR0cDovL3dhaWZ1MngudWRwLmpwOjgw&amp;hl=pt-BR&amp;v=xw1jR43fRSpRG88iDviKn3qM&amp;size=normal&amp;cb=u4amdwzfa4wb" name="a-mozbu5r1cb17" width="304" height="78" frameborder="0" scrolling="no" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-top-navigation allow-modals allow-popups-to-escape-sandbox allow-storage-access-by-user-activation"></iframe></h1>
 </div>
+</body>
 </html>
