--- a/uselessrecaptcha.html
+++ b/uselessrecaptcha.html
@@ -3,9 +3,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 .center {
-  margin: auto;
-  width: 50%;
-  padding: 10px;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 </style>
 </head>
